--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "smart-storage",
-  "version": "0.0.0",
+  "name": "soft-storage",
+  "private": true,
   "packageManager": "pnpm@7.1.0",
   "scripts": {
     "postinstall": "rimraf ./.husky && husky install && pnpm husky:pre-commit-hook && pnpm husky:commit-msg-hook",
     "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "eslint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts",
-    "format": "pnpm -F \"@smart-storage/*\" format",
-    "start:vue-demo": "pnpm -F smart-storage-vue-demo start",
-    "start:react-demo": "pnpm -F smart-storage-react-demo start",
+    "format": "pnpm -F \"@soft-storage/*\" format",
+    "start:vue-demo": "pnpm -F soft-storage-vue-demo start",
+    "start:react-demo": "pnpm -F soft-storage-react-demo start",
     "start:docs": "vuepress dev docs",
-    "test": "pnpm -F \"@smart-storage/*\" test",
-    "test:cov": "pnpm -F \"@smart-storage/*\" test:cov",
-    "build": "pnpm -F \"@smart-storage/*\" build",
+    "test": "pnpm -F \"@soft-storage/*\" test",
+    "test:cov": "pnpm -F \"@soft-storage/*\" test:cov",
+    "build": "pnpm -F \"@soft-storage/*\" build",
     "build:docs": "vuepress build docs",
     "build:pages": "pnpm build && pnpm build:docs && node ./scripts/build-pages.js",
-    "build-only": "pnpm -F \"@smart-storage/*\" build-only",
+    "build-only": "pnpm -F \"@soft-storage/*\" build-only",
     "release": "node ./scripts/release.js",
-    "publish:packages": "pnpm -F \"@smart-storage/*\" publish --access public",
+    "publish:packages": "pnpm -F \"@soft-storage/*\" publish --access public",
     "commit": "cz",
     "commit:lint": "commitlint --edit",
     "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
@@ -30,7 +30,6 @@
     "force-update:deps": "pnpm install && pnpm clean && pnpx rimraf ./pnpm-lock.yaml && pnpm install",
     "force-update:repos": "pnpm force-update:deps && pnpm build"
   },
-  "private": true,
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "17.4.2",
@@ -39,7 +38,7 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
-    "@smart-storage-lib/config": "workspace:*",
+    "@soft-storage-lib/config": "workspace:*",
     "@types/fs-extra": "11.0.1",
     "@types/inquirer": "8.2.5",
     "@types/jest": "29.2.5",
