--- a/packages/vue-hooks/package.json
+++ b/packages/vue-hooks/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@smart-storage/vue-hooks",
-  "version": "0.0.1",
-  "description": "Smarter storage management for Vue",
-  "homepage": "https://github.com/northwang-lucky/smart-storage",
+  "name": "@soft-storage/vue-hooks",
+  "version": "0.0.0",
+  "description": "Softer storage management for Vue",
+  "homepage": "https://github.com/northwang-lucky/soft-storage",
   "repository": {
     "type": "git",
-    "url": "https://github.com/northwang-lucky/smart-storage.git",
+    "url": "https://github.com/northwang-lucky/soft-storage.git",
     "directory": "packages/vue-hooks"
   },
   "author": {
@@ -49,8 +49,8 @@
     "vue": ">=3.1.0"
   },
   "dependencies": {
-    "@smart-storage/hooks": "workspace:*",
-    "@smart-storage/shared": "workspace:*"
+    "@soft-storage/hooks": "workspace:*",
+    "@soft-storage/shared": "workspace:*"
   },
   "devDependencies": {
     "@testing-library/vue": "6.6.1",
