--- a/playground/vue-demo/package.json
+++ b/playground/vue-demo/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "smart-storage-vue-demo",
-  "version": "0.0.0",
+  "name": "soft-storage-vue-demo",
   "private": true,
   "scripts": {
     "start": "vite",
@@ -12,11 +11,11 @@
     "clean": "pnpx rimraf \"./node_modules\" --impl=native"
   },
   "dependencies": {
-    "@smart-storage/vue-hooks": "workspace:*",
+    "@soft-storage/vue-hooks": "workspace:*",
     "vue": "^3.2.45"
   },
   "devDependencies": {
-    "@smart-storage-lib/config": "workspace:*",
+    "@soft-storage-lib/config": "workspace:*",
     "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
