--- a/.github/workflows/coverage-upload.yaml
+++ b/.github/workflows/coverage-upload.yaml
@@ -7,8 +7,7 @@ on:
       - main
     paths:
       - .github/workflows/coverage-upload.yaml
-      - config/rollup.config.cjs
-      - config/tsconfig.base.json
+      - config/**/*
       - packages/**/*
 
 env:
