--- a/.github/workflows/deploy-pages.yaml
+++ b/.github/workflows/deploy-pages.yaml
@@ -7,9 +7,7 @@ on:
       - main
     paths:
       - .github/workflows/deploy-pages.yaml
-      - vercel/**/*
-      - config/rollup.config.cjs
-      - config/tsconfig.base.json
+      - config/**/*
       - docs/**/*
       - packages/*/src/**/*
       - packages/*/package.json
