--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -29,9 +29,7 @@
     "build-only": "rimraf \"./dist\" --impl=native && rollup -c",
     "build": "pnpm test && pnpm build-only",
     "format": "prettier -w \"src/**/*.(js|ts)\"",
-    "clean": "pnpx rimraf \"./node_modules\" --impl=native",
-    "link-readme:unix": "ln -s ../../README.md README.md",
-    "link-readme:win": "mklink -s ../../README.md README.md"
+    "clean": "pnpx rimraf \"./node_modules\" --impl=native"
   },
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.es.js",
