ci: remove global npm token

--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -9,7 +9,6 @@ on:
 env:
   APP_NAME: Lark
   WORKFLOW_URL: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
 jobs:
   notify-start:
@@ -81,7 +80,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish
         if: success()
-        run: pnpm publish:packages
+        run: |
+          npm config set //registry.npmjs.org/:always-auth=true
+          npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
+          pnpm publish:packages
   notify-success:
     if: success()
     runs-on: ubuntu-latest
